--- a/exercicios/modulo 3/ex_01/teste.html
+++ b/exercicios/modulo 3/ex_01/teste.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste</title>
     <style>
-
-        *{
+        * {
             margin: 0px;
             padding: 0px;
         }
 
-        header{
+        header {
             background-color: black;
             color: white;
             text-align: center;
@@ -20,7 +20,7 @@
             box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.322);
         }
 
-        header > h1{
+        header>h1 {
             padding-top: 50px;
             padding-bottom: 20px;
             font-size: 4em;
@@ -28,41 +28,39 @@
 
         }
 
-        header p{
+        header p {
             font-family: sans-serif;
         }
 
 
-        article{
+        article {
             padding-top: 10px;
             text-indent: 30px;
             text-align: justify;
         }
 
-        article > p{
+        article>p {
             padding: 30px;
             line-height: 2em;
             font-family: sans-serif;
             font-weight: 200;
         }
 
-        article > div{
+        article>div {
             width: 100vw;
             height: 400px;
             background-color: black;
         }
 
-        #imagem01{
+        #imagem01 {
             background-image: url(imagens/wallpaper002.jpg);
             background-position: top;
             background-size: cover;
-            background-attachment: fixed ;
+            background-attachment: fixed;
         }
-
-
-
     </style>
 </head>
+
 <body>
 
     <header>
@@ -76,23 +74,45 @@
 
     <main>
 
-        <article >
+        <article>
 
             <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a aut tempora commodi similique repellendus? A, quam harum. Corrupti molestiae harum reiciendis similique voluptas in dignissimos est quia animi facere!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed esse molestias debitis recusandae, quos laboriosam accusamus amet voluptatem rerum odio nihil sequi veniam quis. Possimus nostrum incidunt non quod. Atque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque tenetur aperiam, at impedit, explicabo voluptate rem ea amet praesentium iure repudiandae corporis itaque similique laboriosam ad dolore! Corrupti, facilis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sint repudiandae in, aliquid, eius laudantium excepturi pariatur corporis ipsam, a eligendi quibusdam optio dignissimos alias. Recusandae minus distinctio numquam culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste temporibus consequuntur tenetur necessitatibus recusandae perferendis nam ullam, optio ab obcaecati corrupti esse. Corrupti molestias temporibus, praesentium modi illum eos nesciunt? lorem
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a aut tempora commodi similique
+                repellendus? A, quam harum. Corrupti molestiae harum reiciendis similique voluptas in dignissimos est
+                quia animi facere!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed esse molestias debitis recusandae, quos
+                laboriosam accusamus amet voluptatem rerum odio nihil sequi veniam quis. Possimus nostrum incidunt non
+                quod. Atque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque tenetur aperiam, at
+                impedit, explicabo voluptate rem ea amet praesentium iure repudiandae corporis itaque similique
+                laboriosam ad dolore! Corrupti, facilis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Veniam sint repudiandae in, aliquid, eius laudantium excepturi pariatur corporis ipsam, a eligendi
+                quibusdam optio dignissimos alias. Recusandae minus distinctio numquam culpa. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Iste temporibus consequuntur tenetur necessitatibus recusandae perferendis
+                nam ullam, optio ab obcaecati corrupti esse. Corrupti molestias temporibus, praesentium modi illum eos
+                nesciunt? lorem
 
             </p>
 
         </article>
 
-        <article >
+        <article>
 
             <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a aut tempora commodi similique repellendus? A, quam harum. Corrupti molestiae harum reiciendis similique voluptas in dignissimos est quia animi facere!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed esse molestias debitis recusandae, quos laboriosam accusamus amet voluptatem rerum odio nihil sequi veniam quis. Possimus nostrum incidunt non quod. Atque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque tenetur aperiam, at impedit, explicabo voluptate rem ea amet praesentium iure repudiandae corporis itaque similique laboriosam ad dolore! Corrupti, facilis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sint repudiandae in, aliquid, eius laudantium excepturi pariatur corporis ipsam, a eligendi quibusdam optio dignissimos alias. Recusandae minus distinctio numquam culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste temporibus consequuntur tenetur necessitatibus recusandae perferendis nam ullam, optio ab obcaecati corrupti esse. Corrupti molestias temporibus, praesentium modi illum eos nesciunt? lorem
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a aut tempora commodi similique
+                repellendus? A, quam harum. Corrupti molestiae harum reiciendis similique voluptas in dignissimos est
+                quia animi facere!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed esse molestias debitis recusandae, quos
+                laboriosam accusamus amet voluptatem rerum odio nihil sequi veniam quis. Possimus nostrum incidunt non
+                quod. Atque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque tenetur aperiam, at
+                impedit, explicabo voluptate rem ea amet praesentium iure repudiandae corporis itaque similique
+                laboriosam ad dolore! Corrupti, facilis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Veniam sint repudiandae in, aliquid, eius laudantium excepturi pariatur corporis ipsam, a eligendi
+                quibusdam optio dignissimos alias. Recusandae minus distinctio numquam culpa. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Iste temporibus consequuntur tenetur necessitatibus recusandae perferendis
+                nam ullam, optio ab obcaecati corrupti esse. Corrupti molestias temporibus, praesentium modi illum eos
+                nesciunt? lorem
 
             </p>
 
@@ -100,23 +120,45 @@
 
         </article>
 
-        <article >
+        <article>
 
             <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a aut tempora commodi similique repellendus? A, quam harum. Corrupti molestiae harum reiciendis similique voluptas in dignissimos est quia animi facere!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed esse molestias debitis recusandae, quos laboriosam accusamus amet voluptatem rerum odio nihil sequi veniam quis. Possimus nostrum incidunt non quod. Atque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque tenetur aperiam, at impedit, explicabo voluptate rem ea amet praesentium iure repudiandae corporis itaque similique laboriosam ad dolore! Corrupti, facilis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sint repudiandae in, aliquid, eius laudantium excepturi pariatur corporis ipsam, a eligendi quibusdam optio dignissimos alias. Recusandae minus distinctio numquam culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste temporibus consequuntur tenetur necessitatibus recusandae perferendis nam ullam, optio ab obcaecati corrupti esse. Corrupti molestias temporibus, praesentium modi illum eos nesciunt? lorem
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a aut tempora commodi similique
+                repellendus? A, quam harum. Corrupti molestiae harum reiciendis similique voluptas in dignissimos est
+                quia animi facere!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed esse molestias debitis recusandae, quos
+                laboriosam accusamus amet voluptatem rerum odio nihil sequi veniam quis. Possimus nostrum incidunt non
+                quod. Atque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque tenetur aperiam, at
+                impedit, explicabo voluptate rem ea amet praesentium iure repudiandae corporis itaque similique
+                laboriosam ad dolore! Corrupti, facilis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Veniam sint repudiandae in, aliquid, eius laudantium excepturi pariatur corporis ipsam, a eligendi
+                quibusdam optio dignissimos alias. Recusandae minus distinctio numquam culpa. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Iste temporibus consequuntur tenetur necessitatibus recusandae perferendis
+                nam ullam, optio ab obcaecati corrupti esse. Corrupti molestias temporibus, praesentium modi illum eos
+                nesciunt? lorem
 
             </p>
 
         </article>
 
-        <article  >
+        <article>
 
             <p>
 
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a aut tempora commodi similique repellendus? A, quam harum. Corrupti molestiae harum reiciendis similique voluptas in dignissimos est quia animi facere!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed esse molestias debitis recusandae, quos laboriosam accusamus amet voluptatem rerum odio nihil sequi veniam quis. Possimus nostrum incidunt non quod. Atque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque tenetur aperiam, at impedit, explicabo voluptate rem ea amet praesentium iure repudiandae corporis itaque similique laboriosam ad dolore! Corrupti, facilis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam sint repudiandae in, aliquid, eius laudantium excepturi pariatur corporis ipsam, a eligendi quibusdam optio dignissimos alias. Recusandae minus distinctio numquam culpa. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste temporibus consequuntur tenetur necessitatibus recusandae perferendis nam ullam, optio ab obcaecati corrupti esse. Corrupti molestias temporibus, praesentium modi illum eos nesciunt? lorem
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae a aut tempora commodi similique
+                repellendus? A, quam harum. Corrupti molestiae harum reiciendis similique voluptas in dignissimos est
+                quia animi facere!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed esse molestias debitis recusandae, quos
+                laboriosam accusamus amet voluptatem rerum odio nihil sequi veniam quis. Possimus nostrum incidunt non
+                quod. Atque. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque tenetur aperiam, at
+                impedit, explicabo voluptate rem ea amet praesentium iure repudiandae corporis itaque similique
+                laboriosam ad dolore! Corrupti, facilis totam. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Veniam sint repudiandae in, aliquid, eius laudantium excepturi pariatur corporis ipsam, a eligendi
+                quibusdam optio dignissimos alias. Recusandae minus distinctio numquam culpa. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Iste temporibus consequuntur tenetur necessitatibus recusandae perferendis
+                nam ullam, optio ab obcaecati corrupti esse. Corrupti molestias temporibus, praesentium modi illum eos
+                nesciunt? lorem
 
             </p>
         </article>
@@ -130,4 +172,5 @@
     </footer>
 
 </body>
+
 </html>
