--- a/exercicios/exercicios/01/minha_versao/index.html
+++ b/exercicios/exercicios/01/minha_versao/index.html
@@ -12,17 +12,17 @@
         <div class="container">
             <div class="imagem"></div>
             <div class="conteudo">
-                <h2>perfume</h2>
+                <h2>Perfume</h2>
                 <h1>Gabrielle Essence Eau De Parfum</h1>
                 <p class="texto">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.</p>
                 <p class="preco" id="preco_novo">$149.99</p>
                 <p class="preco" id="preco_velho">$169.99</p>
-                <button>Add to Cart</button>
+                <button>🛒 Add to Cart</button>
             </div>
         </div>
     </main>
     <footer>
-        Add to Cart Challenge by <a href="https://www.frontendmentor.io/home">Frontend Mentor</a>. Coded by <a href="https://github.com/IgoorToorres">Igor Torres</a>
+        Add to Cart Challenge by <a href="https://www.frontendmentor.io/home" target="_blank" rel="external">Frontend Mentor</a>. Coded by <a href="https://github.com/IgoorToorres" target="_blank" rel="external">Igor Torres</a>
     </footer>
 </body>
 </html>
